<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#490606"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/mainactivity_linearlayout_trainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <ToggleButton
            android:id="@+id/mainactivity_tooglebutton_Training_reaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1sp"
            android:layout_marginRight="1sp"
            android:layout_weight="1"
            android:background="@drawable/toggle_button_options_selector"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textOff="@string/reaction"
            android:textOn="@string/reaction"
            android:textSize="15sp"
            />

        <ToggleButton
            android:id="@+id/mainactivity_tooglebutton_Training_decision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1sp"
            android:layout_marginRight="1sp"
            android:layout_weight="1"
            android:background="@drawable/toggle_button_options_selector"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textOff="@string/decision"
            android:textOn="@string/decision"
            android:textSize="15sp"

            />
        <Button
            android:id="@+id/mainactivity_button_Results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1sp"
            android:layout_marginRight="1sp"
            android:layout_weight="1"
            android:background="#836362"
            android:text="@string/results"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/mainactivity_linearlayout_stimulus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ToggleButton
            android:id="@+id/mainactivity_tooglebutton_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1sp"
            android:layout_marginRight="1sp"
            android:layout_weight="1"
            android:background="@drawable/toggle_button_options_selector"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textOff="@string/sound"
            android:textOn="@string/sound"
            android:textSize="20sp" />
        <ToggleButton
            android:id="@+id/mainactivity_tooglebutton_visual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1sp"
            android:layout_marginRight="1sp"
            android:layout_weight="1"
            android:background="@drawable/toggle_button_options_selector"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textOff="@string/visual"
            android:textOn="@string/visual"
            android:textSize="20sp" />
    </LinearLayout>
    <TableLayout
        android:id="@+id/mainactivity_tablelayout_sounds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainactivity_linearlayout_stimulus">
        <TableRow>
            <ToggleButton
                android:id="@+id/mainactivity_tooglebutton_sound_gong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1sp"
                android:layout_weight="1"
                android:background="@drawable/toggle_button_sound_selector"
                android:textAlignment="center"
                android:textOff="@string/gong"
                android:textOn="@string/gong"
                android:textSize="20sp"
                />
            <ToggleButton
                android:id="@+id/mainactivity_tooglebutton_sound_shoot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1sp"
                android:layout_weight="1"
                android:background="@drawable/toggle_button_sound_selector"
                android:textAlignment="center"
                android:textOff="@string/shoot"
                android:textOn="@string/shoot"
                android:textSize="20sp"

                />
            <ToggleButton
                android:id="@+id/mainactivity_tooglebutton_sound_beep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1sp"
                android:layout_weight="1"
                android:background="@drawable/toggle_button_sound_selector"
                android:textAlignment="center"
                android:textOff="@string/beep"
                android:textOn="@string/beep"
                android:textSize="20sp"

                />
        </TableRow>
        <TableRow>
            <ToggleButton
                android:id="@+id/mainactivity_tooglebutton_sound_whistle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1sp"
                android:layout_weight="1"
                android:background="@drawable/toggle_button_sound_selector"
                android:textAlignment="center"
                android:textOff="@string/whistle"
                android:textOn="@string/whistle"
                android:textSize="20sp"
                />
            <ToggleButton
                android:id="@+id/mainactivity_tooglebutton_sound_hajime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1sp"
                android:layout_weight="1"
                android:background="@drawable/toggle_button_sound_selector"
                android:textAlignment="center"
                android:textOff="@string/hajime"
                android:textOn="@string/hajime"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/mainactivity_button_pickSound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1sp"
                android:layout_weight="1"
                android:background="#836362"
                android:text="@string/test_amplitude"
                android:textAlignment="center"
                android:textSize="20sp"

                />
        </TableRow>
    </TableLayout>
    <TextView
        android:id="@+id/mainactivity_textview_amplitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainactivity_tablelayout_sounds"
        android:layout_margin="1sp"
        android:text="@string/amplitude"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />
    <RelativeLayout
        android:id="@+id/mainactivity_RelativeLayout_amplitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainactivity_textview_amplitude" >
        <TextView
            android:id="@+id/mainactivity_amplitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColor="#FFFFFF" />
        <SeekBar
            android:id="@+id/mainactivity_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/mainactivity_amplitude" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/mainactivity_linearlayout_treningType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainactivity_RelativeLayout_amplitude"
        android:orientation="horizontal">
        <ToggleButton
            android:id="@+id/mainactivity_tooglebutton_trening_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1sp"
            android:layout_weight="1"
            android:background="@drawable/toggle_button_options_selector"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textOff="@string/training_time"
            android:textOn="@string/training_time"
            android:textSize="20sp" />
        <ToggleButton
            android:id="@+id/mainactivity_tooglebutton_punchCounter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1sp"
            android:layout_weight="1"
            android:background="@drawable/toggle_button_options_selector"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textOff="@string/punch_counter"
            android:textOn="@string/punch_counter"
            android:textSize="20sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/mainactivity_textview_counetr_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainactivity_linearlayout_treningType"
        android:layout_margin="1sp"
        android:text="@string/how_many"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        />
    <RelativeLayout
        android:id="@+id/mainactivity_RelativeLayout_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainactivity_textview_counetr_label" >

        <TextView
            android:id="@+id/mainactivity_textview_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColor="#FFFFFF" />
        <SeekBar
            android:id="@+id/mainactivity_seekbar_counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/mainactivity_textview_counter" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/mainactivity_linearlayout_scores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/mainactivity_linearlayout_trainer">
        <TextView
            android:id="@+id/mainactivity_text_best"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/best_time"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/mainactivity_text_last"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/last_time"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            />
    </LinearLayout>
    <Button
        android:id="@+id/mainactivity_button_start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/mainactivity_linearlayout_scores"
        android:layout_below="@id/mainactivity_RelativeLayout_counter"
        android:layout_marginTop="70sp"
        android:background="#614140"
        android:text="@string/start"
        android:textSize="40sp"
        />


</RelativeLayout>